# datasworn

./: .gitignore  CHANGELOG.md  README.md  TODO.md  build.py  bun.lockb  package-lock.json  package.json  tsconfig.json
datasworn/: datasworn.schema.json
datasworn/ancient_wonders/: ancient_wonders.json
datasworn/starforged/: starforged.json
datasworn/starsmith/: starsmith.json
datasworn/sundered_isles/: sundered_isles.json
json-typedef/csharp-system-text/: TriggerNoRollCondition.cs
json-typedef/java-jackson/: TriggerNoRollCondition.java
pkg/python/: README.md  TODO.md  build.py
pkg/python/datasworn/: .gitignore  README.md  pyproject.toml
pkg/python/datasworn-community-content/: README.md  pyproject.toml
pkg/python/datasworn-example/: README.md  main.py  pyproject.toml
scripts/: add-missing-starsmith-oracles.ts  add-oracle-links.ts  convert-ironsmith-assets.ts  convert-ironsmith-flavor-packs.ts  convert-ironsmith-oracles.ts  convert-starsmith-assets.ts  new-expansion.ts  reorganize-planets.ts  validate-packages.ts
source_data/: datasworn-source.schema.json
source_data/ancient_wonders/: TODO.md  assets.yaml  oracles.yaml
source_data/ancient_wonders/oracles/: planet.yaml
source_data/starforged/: moves.yaml
source_data/starsmith/: assets.yaml
source_data/sundered_isles/assets/: vehicle.yaml
src/: shellify.ts
src/builders/: IdBuilder.ts  index.ts
src/migration/: getVersionIds.ts  migrations.ts  replacementMap.ts  types.ts
src/migration/utils/: 0_0_10.ts
src/pkg-core/: Datasworn.ts  DataswornSource.ts  IdParser.ts  StringId.ts  TypeNode.ts  index.ts  mergeExpansion.ts  tsconfig.json
src/pkg-core/Builders/: RulesPackageBuilder.ts
src/pkg-core/IdElements/: PathKeys.ts  Pattern.ts  TypeGuard.ts  TypeId.ts  index.ts
src/pkg-core/Migrations/: updateIds.ts
src/pkg-core/Utils/: Array.ts  Id.ts  Sort.ts
src/pkg-core/Validators/: Collection.ts  OracleCollection.ts  OracleRollable.ts  OracleRollableRow.ts  Text.ts  index.ts
src/schema/: Assets.ts  Atlas.ts  Defs.ts  DelveSites.ts  Generic.ts  Npcs.ts  Oracles.ts  Rarities.ts  Root.ts  Rules.ts  RulesPackages.ts  Truths.ts  Utils.ts  index.ts
src/schema/assets/: Ability.ts  Enhancement.ts  Fields.ts  common.ts
src/schema/common/: Fields.ts  Id.ts  Inputs.ts  Metadata.ts  Player.ts  Progress.ts  Range.ts  RollableValues.ts  Rolls.ts  Text.ts  index.ts
src/schema/delve/: DelveSite.ts  DelveSiteDomain.ts  common.ts  (+1 more)
src/scripts/: augmentations.ts  findOrphanSchemas.ts  niceTypes.ts
src/tests/: IdConstants.test.ts  IdMigration.test.ts  IdParser.test.ts  LegacyId.test.ts  build.test.ts  loadJson.ts  runtime.test.ts  typed-exports-demo.ts
src/types/: Datasworn.d.ts  DataswornSource.d.ts
tools/viewer/: README.md  TODO.md  package-lock.json  package.json  vite.config.ts
(+166 files in other folders)
